--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ wad = { path = "wad" }
 engine = { path = "engine" }
 game = { path = "game" }
 math = { path = "math" }
+menu = { path = "menu" }
 
 env_logger = "0.8.3"
 structopt = "0.3.21"
