--- a/menu/Cargo.toml
+++ b/menu/Cargo.toml
@@ -14,6 +14,8 @@ idcontain = "0.7.6"
 failure = "0.1.8"
 failchain = "0.1018.2"
 
+indexmap = "1.6.2"
+
 [dependencies.log]
 features = ["release_max_level_info"]
 version = "0.4.14"
